# ooroo

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  impl-plan.md
.github/workflows/: ci.yaml
benches/: evaluate.rs  throughput.rs
examples/: basic.rs  detailed_report.rs  dsl.rs  list_membership.rs  multithreaded.rs  policy.rs  priority.rs  rules.ooroo  threshold.rs
src/: CLAUDE.md  compile.rs  error.rs  evaluate.rs  lib.rs  serial.rs
src/parse/: CLAUDE.md  error.rs  grammar.rs  mod.rs  parser.rs
src/types/: CLAUDE.md  context.rs  error.rs  evaluation_report.rs  expr.rs  field_registry.rs  indexed_context.rs  mod.rs  rule.rs  ruleset.rs  value.rs  verdict.rs
tests/: binary_cache.rs  dsl_parse.rs  edge_cases.rs  field_to_field.rs  kani_proofs.rs  list_values.rs  proptest_eval.rs  proptest_invariants.rs  relational.rs  strategies.rs  threaded.rs  threshold.rs
