[package]
name = "ooroo"
version = "0.1.0"
edition = "2021"
authors = ["Devin Ward <devissquared@gmail.com>"]
description = "A fast, compiled rule engine with a text-based DSL"
license = "MIT"
repository = "https://github.com/ooroo-rs/ooroo"
keywords = ["rules", "dsl", "engine", "evaluation"]
categories = ["data-structures", "config"]
readme = "README.md"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[dependencies]
thiserror = "2"
winnow = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "evaluate"
harness = false

[[bench]]
name = "throughput"
harness = false
